--- a/_posts/2024-06-28-122.md
+++ b/_posts/2024-06-28-122.md
@@ -5,9 +5,27 @@ date: 2024-06-28 08:00:00 +0200
 description: 
 episode: "122"
 tags: ["llm","JuniorDeveloper","terraform","GitHub","AmazonQDeveloperAgent","opensource","did","Meta","Python","php","cloudflare","netflix","api","openai"]
-spreaker: 
+spreaker: 60525798
 apple: 
 newsletter:  |
+  Serwus!
+  
+  W finale tego sezonu naszego podcastu, zabieramy Was w podróż po najgorętszych tematach w IT. Zastanawialiście się kiedyś, czy era juniorów w IT dobiega końca przez rosnące zastosowanie AI w programowaniu? Dzisiejszy odcinek rzuca nowe światło na tę kontrowersyjną debatę.
+  Posłuchaj tutaj: <https://patoarchitekci.io/122/>
+  **AI vs Junior Developers: Koniec czy Nowy Początek?**
+  LLM-y, czyli duże modele językowe, mogą zrewolucjonizować sposób, w jaki kodujemy, testujemy i zarządzamy projektami IT. Amazon Q Developer Agent już pokazał, jak można zredukować zespoły developerskie. Co to oznacza dla przyszłości młodych talentów w branży? Czy to koniec, czy nowa era możliwości?
+  
+  **Open Source w Cieniu Korporacji**
+  Otwarte oprogramowanie zawsze było fundamentem innowacji w IT. Ale czy może konkurować z rozwiązaniami tworzonymi przez gigantów technologicznych, którzy inwestują miliardy? Przeanalizujemy obecną dynamikę i to, jak open source może ewoluować, aby utrzymać swoją relevancję i niezależność.
+  
+  **Terraform: Czy To Już Koniec?**
+  Narzędzie, które zrewolucjonizowało zarządzanie infrastrukturą jako kodem, jest pod ostrzałem krytyki. Nowe podejścia i narzędzia, takie jak Infrastructure From Code, obiecują być bardziej elastyczne i dostosowane do współczesnych wymagań. Czy Terraform zostanie z nami na dłużej, czy też będziemy świadkami jego stopniowego zastępowania przez nowocześniejsze rozwiązania?
+  
+  **Podsumowując**
+  Nie przegapcie naszych przemyśleń i analiz w ostatnim odcinku sezonu. Subskrybujcie, słuchajcie i dzielcie się swoimi opiniami! Wasze wsparcie pomaga nam tworzyć coraz lepsze treści, więc nie zapomnijcie zostawić recenzji na Spotify, Apple Podcasts czy innej platformie, na której nas słuchacie.
+  A więcej materiałów znajdziecie tutaj: <https://patoarchitekci.io/122/>
+  
+  Do usłyszenia wkrótce w kolejnym sezonie Patoarchitektów!
   
 
   ## Posłuchaj odcinka na ⬇️
@@ -26,7 +44,7 @@ newsletter:  |
 
 ➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
 
-Siema, patoarchitekci! W ostatnim odcinku tego sezonu rozprawiamy o przyszłości IT po wprowadzeniu LLM-ów, które mogą zrewolucjonizować branżę kodowania. 
+Siema, Patoarchitekci! Kolejny sezon dobiega koca i tym razem nie jesteśmy sami! Towarzyszy nam publiczność :) A co dzisiaj? Rozprawiamy o przyszłości IT po wprowadzeniu LLM-ów, które mogą zrewolucjonizować branżę kodowania. 
 **Czy juniorzy w IT zostaną wyeliminowani przez AI?** Dowiedz się, **dlaczego open source może być na straconej pozycji **i jakie są przyszłe kierunki dla Terraform. 
 Nie przegap tego odcinka, bo na końcu rozważamy, czy wracamy do '80, gdzie opensource był luksusem. I na deser, prawda o Terraform, który rzekomo umarł.Zapnijcie pasy, to będzie kontrowersyjna jazda!
 
@@ -46,8 +64,7 @@ Linki i ciekawe znaleziska:
 
 ### Transkrypcja
 
-Publiczność
-Cześć, słuchajcie Patoarchitektów.
+**Publiczność: **Cześć, słuchacie Patoarchitektów.
 
 **Szymon Warda**: Prowadzą Szymon Warda...
 
@@ -218,15 +235,13 @@ Oczywiście, Marek z tej strony, Wasz stałych słuchaczy. Ja zacznę od klasyki
 
 **Szymon Warda**: To wyglądało tak, że damy ci seniora jeżeli weźmiesz dwóch juniorów. I to się ucięło. Coś więcej, ktoś, coś?
 
-Publiczność
-Właściwie kontynuując temat body leasingu, bo Eldorado na świecie versus Eldorado w Polsce. My de facto na zachód jesteśmy tanią montownią nawet kodu.
+**Publiczność: **Właściwie kontynuując temat body leasingu, bo Eldorado na świecie versus Eldorado w Polsce. My de facto na zachód jesteśmy tanią montownią nawet kodu.
 
 **Szymon Warda**: Nie jesteśmy już tani.
 
 **Łukasz Kałużny**: Nie jesteśmy.
 
-Publiczność
-I właśnie przestajemy być tani.
+**Publiczność: **I właśnie przestajemy być tani.
 
 **Szymon Warda**: Przestaliśmy być tani. To, że Zachód wychodzi, to nie tylko wynikało z tego, że tani, ale to jest też kwestia dostępności ludzi. Że jak chcesz się bić o dość wąską, skończoną grupę ludzi, którzy coś umieją, to trzeba wyjść poza ten mały obszar wody, żeby szukać gdzie indziej.
 
@@ -238,25 +253,21 @@ I właśnie przestajemy być tani.
 
 **Szymon Warda**: Kończąc myśl, to bardziej chodzi o to, że powinniśmy pokazywać się nie jako tańsza siła robocza, tylko jako dobra siła robocza, a mamy z tym chyba jeszcze trochę problemy tak naprawdę, sorry. I to co mówi Sebastian, to jest to, że my też zawsze bardzo mocno polegamy na zewnętrznych firmach, a mamy dość mało takich własnych biznesów i to jest trochę ryzykowne. Będziemy bardziej narażeni na wszystkie ruchy, powiedzmy nawet geopolityczne. Zobaczymy, jak się ułoży.
 
-Publiczność
-Tu też pojawia się pytanie czy my mamy jakąkolwiek możliwość wytworzenia wewnętrznie firm IT, z sektora IT produktowego na nasz rynek?
+**Publiczność:** Tu też pojawia się pytanie czy my mamy jakąkolwiek możliwość wytworzenia wewnętrznie firm IT, z sektora IT produktowego na nasz rynek?
 
 **Szymon Warda**: Masz kilka firm, które istnieją na polskim, które istnieją na rynku zagranicznym. Mamy.
 
-Publiczność
-Tak, ale w konkurencji do reszty świata?
+**Publiczność:** Tak, ale w konkurencji do reszty świata?
 
 **Łukasz Kałużny**: To problem Europy. Taniej jest kupić kolejną kawalerkę niż zaryzykować kasę. To jest akurat... W Stanach, powiedzmy, że tam jest większy apetyt na ryzyko i podejście do ryzyka. Jak popatrzycie sobie na to, gdzie jest kapitał? W Europie startupy. Większość startupów żyje z jakichś dziwnych funduszy i VC-ki, które są w Europie, potrafią mieć mega ilość dotacji nie od prywatnych inwestorów, tak jak jest gdzieś to na świecie, tylko rządowe pieniądze za które do końca nie odpowiadają, bo jak coś upadnie to upadło i tyle. Bo to był bardziej fundusz innowacyjno-pomocowy, niż faktycznie inwestycyjny i nie było tzw. skin in the game.
 
 **Szymon Warda**: Ustalmy, nie było takiego czasu w historii, kiedy byłyby mniejsze granice zrobienia biznesu ogólnoświatowego niż teraz. Nie było. Po prostu obecnie odpalamy cokolwiek, szczególnie, jeżeli chodzi w IT i to działa międzynarodowo. Dlatego rozkręcamy firmę z Łukaszem. No właśnie, autoreklama. Tyle. Wydaje mi się, że to kwestia mentalnego podejścia. To się, mam nadzieję, zmieni, zobaczymy jak bardzo.
 
-Publiczność
-Zastanawiam się na ile widzicie jakieś ruchy w kierunku wydawania pieniędzy na cyberbezpieczeństwo? Bo z jednej strony bardzo dużo się o tym mówi od jakiegoś czasu, lat może ostatnich, a z drugiej jednak są trochę cięcia.
+**Publiczność:** Zastanawiam się na ile widzicie jakieś ruchy w kierunku wydawania pieniędzy na cyberbezpieczeństwo? Bo z jednej strony bardzo dużo się o tym mówi od jakiegoś czasu, lat może ostatnich, a z drugiej jednak są trochę cięcia.
 
 **Szymon Warda**: Wiesz co?
 
-Publiczność
-Czasami mam wrażenie, że compliance tylko.
+**Publiczność**: Czasami mam wrażenie, że compliance tylko.
 
 **Szymon Warda**: Wiesz co? Jeżeli generalnie za wyciek danych, masz firmę, która robi miliardy, ma karę na poziomie kilkudziesięciu milionów, to to jest koszt operacyjny, a nie wydatki. Więc to masz jeden koszt. A drugi, to jest to, że dyrektor, żeby go nie wywalili za taką sytuację, potrzebuje dupokrytyki i nic więcej.
 
@@ -264,8 +275,7 @@ Czasami mam wrażenie, że compliance tylko.
 
 **Szymon Warda**: Ktoś musi dostać mocno po dupie, żeby to się ruszyło. Tak mocno, mocno, zauważalnie, że reszta działki stwierdzi: ok, pora się ruszyć, bo czegoś takiego nie za bardzo przeżyjemy. Bez tego - koszt operacyjny.
 
-Publiczność
-Dobra, zaczynałem, to skończę chyba ostatnim pytaniem. Szymon wspomniał o geopolityce. Ja bym chciał zapytać o technologiczny wyścig zbrojeń między jedną siłą a drugą siłą? If You know...
+**Publiczność**: Dobra, zaczynałem, to skończę chyba ostatnim pytaniem. Szymon wspomniał o geopolityce. Ja bym chciał zapytać o technologiczny wyścig zbrojeń między jedną siłą a drugą siłą? If You know...
 
 **Szymon Warda**: What he means.
 
@@ -279,8 +289,7 @@ Dobra, zaczynałem, to skończę chyba ostatnim pytaniem. Szymon wspomniał o ge
 
 **Łukasz Kałużny**: Dalej jest open, ale kasa która na to idzie nie jest już z dobrej chęci z piwnicy. Nie oszukujmy się, ten taki hype, jak hipisi, że będziemy pisali i utrzymywali kod po godzinach, to to było nierealne. Ludzie się starzeją i chcieliby się jakoś utrzymać. Więc to jest dobre bardzo. Fajnie, że niektóre opensource'y uzyskują kasę na utrzymanie się. No tak, tyle.
 
-Publiczność
-Kontynuując temat opensource'u czy CNCF jest właściwie najlepszym sposobem finansowania opensource? Czy jest jakiś inny?
+**Publiczność:** Kontynuując temat opensource'u czy CNCF jest właściwie najlepszym sposobem finansowania opensource? Czy jest jakiś inny?
 
 **Szymon Warda**: Jest jedynym realnym. Jeszcze jest Linux Foundation.
 
@@ -290,8 +299,7 @@ Kontynuując temat opensource'u czy CNCF jest właściwie najlepszym sposobem fi
 
 **Łukasz Kałużny**: Pierwszą działką. A drugie jest po prostu firmy, które to wykorzystują, sponsorują tego rozwój, żeby przyciągnąć też do swoich offeringów, co jest ważne, bo robią to dokładnie w celu, żeby przyciągnąć.
 
-Publiczność
-To ja będę kontynuował temat opensource;u. Czy myślicie, że opensource stanie się bardziej open albo za jakiś zacznie wchodzić? Bo już widzimy, że właśnie TFM trochę licencji zmienił, mocny zaczął się wyścig zbrojeń pod względem technologicznym. Czy np. niektóre agendy zostaną w ogóle wykluczone z dostępności do jakichś rozwiązań opensource'owych?
+**Publiczność:** To ja będę kontynuował temat opensource;u. Czy myślicie, że opensource stanie się bardziej open albo za jakiś zacznie wchodzić? Bo już widzimy, że właśnie TFM trochę licencji zmienił, mocny zaczął się wyścig zbrojeń pod względem technologicznym. Czy np. niektóre agendy zostaną w ogóle wykluczone z dostępności do jakichś rozwiązań opensource'owych?
 
 **Łukasz Kałużny**: Może być akcja, że wrócimy do lat 80 i 90, gdzie tego opensource'u prawie nie było. Już teraz się gdzieś pojawiają głosy, że właśnie od strony bezpieczeństwa, że rozwiązania secowe powinny być zupełnie closedsource, żeby nie dało się ich w łatwy sposób obejrzeć i powinna wrócić porządna fokusacja. Bo jak ktoś władowuje się teraz na dowolny appliance od bezpieczeństwa, to Python hula i pokazuje co ma pod spodem.
 
@@ -305,8 +313,7 @@ To ja będę kontynuował temat opensource;u. Czy myślicie, że opensource stan
 
 **Szymon Warda**: W ogóle odcinek z Jarkiem może być ciekawy.
 
-Publiczność
-Mam wrażenie, że to, o czym mówisz, już w pewnym sensie istnieje, bo wiele usług, które są managed w chmurach nawet przez providerów jest udostępnione. Cloud Functions czy Cloud Run z GCP-a jest keyservem, który działa gdzieś.
+**Publiczność:** Mam wrażenie, że to, o czym mówisz, już w pewnym sensie istnieje, bo wiele usług, które są managed w chmurach nawet przez providerów jest udostępnione. Cloud Functions czy Cloud Run z GCP-a jest keyservem, który działa gdzieś.
 
 **Szymon Warda**: Tak, bo to się pojawia, to nie będzie takie zero-jedynkowe, że nagle się pojawiło, a wczoraj nie było. Tego jest teraz coraz więcej.
 
@@ -314,8 +321,7 @@ Mam wrażenie, że to, o czym mówisz, już w pewnym sensie istnieje, bo wiele u
 
 **Szymon Warda**: Tak, raz na jakiś czas ktoś tam jakiegoś babola znajdzie, jakieś się wokół tego community zrobi, coś tam się zadzieje. Więc tam istnienie tego opensource'u ma jakąś wartość. Ja czekam na takie opcje, że będą certyfikaty do różnych wersji opensource'u, że spełnia tą, tą, tą normę, to było tak przeskanowane i taka weryfikacja, że przeszło przez ustalone normy czy też testy środowiskowe.
 
-Publiczność
-Wyciągnijcie swoje szklane kule i powróżcie, co będzie jak wszyscy wrócą z tych urlopów we wrześniu? Kierunek, oprócz tego oczywistego, AI.
+**Publiczność:** Wyciągnijcie swoje szklane kule i powróżcie, co będzie jak wszyscy wrócą z tych urlopów we wrześniu? Kierunek, oprócz tego oczywistego, AI.
 
 **Szymon Warda**: To jest taka fajna opcja, jak najdokładniej przewidzieć pogodę jaka będzie jutro? Będzie taka sama jak jest dzisiaj. I będziesz na tym miał najmniejszy błąd statystycznie. Po wakacjach będzie tak samo i tak samo jak przed wakacjami, niewiele się zmieni.
 
