--- a/_news/2024-07-09-2.md
+++ b/_news/2024-07-09-2.md
@@ -1,3 +1,7 @@
+---
+title: "Pato Short Mail #2 🚀"
+date: 2024-07-09
+---
 W tym tygodniu Szymon zabiera nas w podróż przez “Platforma jako runtime,” a Łukasz odkrywa “GraphRAG”! 🚀
 
 ## Szymon: [Platform as a Runtime - the Next Step in Platform Engineering](https://www.infoq.com/articles/platform-runtime-engineering/)
