--- a/_news/2024-07-23-4.md
+++ b/_news/2024-07-23-4.md
@@ -1,3 +1,7 @@
+---
+title: "Pato Short Mail #4 🚀"
+date: 2024-07-23
+---
 
 ## Szymon: [CNCF na temat IDP](https://tag-app-delivery.cncf.io/whitepapers/platforms/)
 Jak dla większości z Was wakacje dla mnie to jest też czas nadrabiania zaległości które się zebrały przez cały rok. Dlatego dziś raczej wyleżany link, ale bardzo dobry.
