--- a/_news/2024-07-30-5.md
+++ b/_news/2024-07-30-5.md
@@ -2,6 +2,8 @@
 title: "Pato Short Mail #5 🚀"
 date: 2024-07-30
 ---
+W dzisiejszym wydaniu naszego newslettera przyjrzymy się nowej koncepcji RAT jako alternatywy dla MVP oraz omówimy ciche wycofanie przez AWS kilku popularnych usług.
+
 Sprawdź szkolenie z Łukaszem dla community [Order of Devs](https://discord.gg/tcuHtnBede) - [[28.08.2024] Szkolenie RKE2 i Rancher](https://app.easycart.pl/checkout/kaluznyio/szkolenie-rke2-i-rancher) - uwaga, ze względu na pierwszą edycję cena jest mega promocyjna.
 
 ## Szymon: [MVP nie żyje! Niech żyje RAT!](https://hackernoon.com/the-mvp-is-dead-long-live-the-rat-233d5d16ab02)
