--- a/_news/2024-08-15-6.md
+++ b/_news/2024-08-15-6.md
@@ -2,6 +2,9 @@
 title: "Pato Short Mail #6 🚀"
 date: 2024-08-15
 ---
+Hej!
+
+Z drobnym wakacyjnym poślizgiem pato czytanka. Dziś od Szymona na temat organizacyjnej architektury w skali, a drugi od Łukasza, który omawia przemyślenia Rona Jeffriesa na temat Story Points.
 
 ## Szymon: [Organizacyjna architektura w skali](https://medium.com/decathlondigital/software-architecture-making-decisions-f04cdd2cb3cf)
 W sieci znajdziemy całą masę artykułów o architekturze systemów średnich i dużych systemów. Jednak jak dostajemy pytania od Was, to najczęściej nie dotyczą one tej architektury, ale roli architekta i ułożenia procesów w około architektury w  organizacji. Więc proszę bardzo! Oto cała seria artykułów właśnie na ten temat:
@@ -24,3 +27,8 @@ Szybkie TL;DR:
 
 W całości brakuje mi trochę krytyki User Stories, bo często nie są one żadną realną analizą, tylko _chciejstwem_.
 
+Sprawdź szkolenie z Łukaszem dla community [Order of Devs](https://discord.gg/tcuHtnBede) - [[28.08.2024] Szkolenie RKE2 i Rancher](https://app.easycart.pl/checkout/kaluznyio/szkolenie-rke2-i-rancher) - uwaga, ze względu na pierwszą edycję cena jest mega promocyjna.
+
+BTW Sprawdź [Patoszkolenia](https://patoarchitekci.io/szkolenia/), jest harmonogram do końca roku i miejsca znikają!
+
+PS. Masz pytania? Pisz śmiało po drugiej stronie to nie bot na bazie GPT czy Claude 😎
