--- a/_news/2024-08-20-7.md
+++ b/_news/2024-08-20-7.md
@@ -6,6 +6,15 @@ date: 2024-08-20
 
 Dziś Szymon poleca artykuł o wyzwaniach w budowaniu zespołów na przykładzie modelu Spotify, a Łukasz komentuje najnowsze zasady bezpieczeństwa architektonicznego od The Open Group.
 
+Sprawdź szkolenie z Łukaszem dla community [Order of Devs](https://discord.gg/tcuHtnBede) - [[28.08.2024] Szkolenie RKE2 i Rancher](https://app.easycart.pl/checkout/kaluznyio/szkolenie-rke2-i-rancher) - uwaga, ze względu na pierwszą edycję cena jest mega promocyjna. Zaraz kończą się miejsca!
+
+BTW, sprawdź jesienne [Patoszkolenia](https://patoarchitekci.io/szkolenia/)!
+
+## Szymon: ["Trudniejsze" decyzje w budowaniu zespołów](https://www.sciencedirect.com/science/article/pii/S0164121223000444)
+Był taki moment, że każda organizacja chciała mieć, albo "miała" model zespołów ze Spotify. Wraz z czasem model ten obrósł w mity i legendy, a każdy rozumiał to co usłyszał inaczej. Kolejne artykuły i prelekcje z trzeciej ręki nie pomagały. 
+Jednak czasem trafia się na analizy naukowe które pracowały z faktycznymi zespołami i przeanalizowali w jaki sposób realizowane są te niby oczywiste, ale w praktyce nie tak bardzo proste obszary
+Artykuł warty do przeczytania dla każdego kto myśli jak ułożyć zespoły. Nie tylko developerskie.
+
 ## Łukasz: [The Open Group Standard - Security Principles for Architecture](https://drive.google.com/file/d/1eW5Extz_TpbpOBNiqqgXtFN5iM9Med2d/view?usp=sharing)
 "Boomerzy" z The Open Group (ci od nudnego TOGAF-a) wydali "Security Principles for Architecture". Zasady bezpieczeństwa (wysokopoziomowe), które można stosować w ramach architektur korporacyjnych, architektur technologicznych, architektur rozwiązań i innych, jak to opisują.
 Ciekawe, że dokument kładzie nacisk na automatyzację i "secure by design", co pokazuje ewolucję myślenia. Widać, że The Open Group dostrzega rosnące znaczenie tych aspektów w nowoczesnych architekturach (nigdy nie jest za późno 😅).
@@ -35,13 +44,5 @@ Same zasady:
 14. Leverage Established Security Control Frameworks
 
 
-## Szymon: ["Trudniejsze" decyzje w budowaniu zespołów](https://www.sciencedirect.com/science/article/pii/S0164121223000444)
-Był taki moment, że każda organizacja chciała mieć, albo "miała" model zespołów ze Spotify. Wraz z czasem model ten obrósł w mity i legendy, a każdy rozumiał to co usłyszał inaczej. Kolejne artykuły i prelekcje z trzeciej ręki nie pomagały. 
-Jednak czasem trafia się na analizy naukowe które pracowały z faktycznymi zespołami i przeanalizowali w jaki sposób realizowane są te niby oczywiste, ale w praktyce nie tak bardzo proste obszary
-Artykuł warty do przeczytania dla każdego kto myśli jak ułożyć zespoły. Nie tylko developerskie.
-
-Sprawdź szkolenie z Łukaszem dla community [Order of Devs](https://discord.gg/tcuHtnBede) - [[28.08.2024] Szkolenie RKE2 i Rancher](https://app.easycart.pl/checkout/kaluznyio/szkolenie-rke2-i-rancher) - uwaga, ze względu na pierwszą edycję cena jest mega promocyjna.
-
-BTW Sprawdź [Patoszkolenia](https://patoarchitekci.io/szkolenia/), jest harmonogram do końca roku i miejsca znikają!
 
 PS. Masz pytania? Pisz śmiało po drugiej stronie to nie bot na bazie GPT czy Claude 😎
