--- a/_posts/2024-05-24-117.md
+++ b/_posts/2024-05-24-117.md
@@ -8,6 +8,29 @@ tags: ["BDoS","SQL","serverless","Postgres","Dotnet","observability","prometeusz
 spreaker: 60147406
 apple: 
 newsletter:  |
+  Serwus!
+  
+  Najnowszy odcinek Patoarchitektów już jest dostępny w Twojej ulubionej pace podcastowej. 
+  
+  Tutaj z kolei znajdziesz materiały, linki i transkrypcję: <https://patoarchitekci.io/117/>
+  
+  Dzisiaj bierzemy na tapet kilka z najbardziej obiecujących, ale równocześnie kontrowersyjnych technologii w branży IT. Analizujemy, dyskutujemy i oceniamy – wszystko, aby dać Ci pełny obraz możliwości oraz wyzwań, które niosą ze sobą najnowsze innowacje.
+  
+  **1. Serverless – przyszłość czy moda?**
+  Szymon dzieli się swoimi doświadczeniami ze szkolenia z observability, omawiając różnice między klasycznymi rozwiązaniami APM a nowoczesnymi, otwartoźródłowymi stosami opartymi o Prometeusza i Grafanę. Czy serverless jest odpowiedzią na obecne potrzeby rynku, czy raczej tymczasowym rozwiązaniem?
+  
+  **2. Graph Databases i ich miejsce w IT**
+  Łukasz zagłębia się w rozwój i standardy baz danych typu graph, z szczególnym uwzględnieniem nowych standardów ISO dla języka GraphQL. Co sprawia, że bazy graphowe są niezastąpione w pewnych zastosowaniach, a gdzie ich używanie może prowadzić do problemów?
+  
+  **3. BDoS – Czym jest Database Oriented Operating System?**
+  Rozmawiamy o nowym podejściu do systemów operacyjnych, które koncentrują się na bazach danych. Szymon i Łukasz oceniają potencjał BDoS, systemu, który obiecuje zmianę zasad gry w zarządzaniu danymi i aplikacjami. Jakie wyzwania niesie ta technologia?
+  
+  **4. Postgres i .NET**
+  Na koniec przyglądamy się, jak integracja .NET z PostgreSQL może zmienić sposób tworzenia i zarządzania bazami danych. To nie tylko techniczna nowinka – to potencjalna rewolucja w dostępności i efektywności zarządzania danymi.
+  Nie przegap tego odcinka, jeśli chcesz zrozumieć, jak nowoczesne technologie wpływają na codzienną pracę specjalistów IT i jak mogą one zmieniać przyszłość branży. Posłuchaj, dołącz do dyskusji i podziel się swoimi przemyśleniami!
+  **Posłuchaj teraz** - [kliknij tutaj, aby przejść do odcinka.](https://patoarchitekci.io/117/)
+  
+  Do następnego razu!
   
 
   ## Posłuchaj odcinka na ⬇️
@@ -29,13 +52,14 @@ newsletter:  |
 Cześć! W dzisiejszym odcinku Patoarchitektów wnikamy w zawiłości serverless, innowacji bazodanowych i systemów operacyjnych nastawionych na bazy danych. 
 Omawiamy praktyczne implikacje technologii serverless, przeanalizują **wpływ nowych trendów w bazach danych graphowych**, oraz zgłębiają potencjalne przełomy jak BDoS – system operacyjny zorientowany na bazy danych. 
 Na stole kładziemy pytania o **skalowalność, wydajność i rzeczywistą użyteczność** nowinek technicznych. Czy te technologie naprawdę mają szansę na zmianę gry w branży IT, czy to kolejne puste obietnice? Sprawdzimy!
+**[Meetup z okazji zamknięcie 3 sezonu - 06.06.2024](https://pato-koniec-3-sezonu.konfeo.com/pl/groups)**
+**Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)**
 
 
 Słuchasz Patoarchitektów dzięki Protopii. Sprawdź, jak Patoarchitekci i Protopia mogą Ci pomóc ➡️ [protopia.tech](https://protopia.tech/)
 
 Linki i ciekawe znaleziska:
 
-- [Szkolenia](https://protopia.tech/szkolenia)
 - [ ISO/IEC 39075:2024 - Information technology — Database languages — GQL](https://www.iso.org/standard/76120.html)
 - [ISO GQL: A Defining Moment in Database Innovation](https://neo4j.com/blog/gql-international-standard/)
 - [Hello DBOS - Announcing DBOS Cloud](https://www.dbos.dev/blog/announcing-dbos)
