--- a/_posts/2024-06-21-121.md
+++ b/_posts/2024-06-21-121.md
@@ -8,6 +8,25 @@ tags: ["dora","devops","ContainerApps","kubernetes","CI/CD","GitHub","Octopus","
 spreaker: 60446841
 apple: 
 newsletter:  |
+  Serwus!
+  
+  Czy zastanawialiście się kiedyś, jak efektywnie mierzyć i optymalizować procesy w waszych projektach IT? 
+  
+  W najnowszym odcinku naszego podcastu, Kinga Gaździńska z grupy Pracuj zdradza tajniki metryk DORA, które rewolucjonizują podejście do DevOps.
+  
+  **Co czeka na Was w tym odcinku:**
+  
+  - **Sekrety metryk DORA:** Dowiedzcie się, jak kluczowe wskaźniki mogą zmienić podejście do zarządzania projektami IT.
+  
+  - **Praktyczne wskazówki:** Kinga dzieli się swoimi doświadczeniami z wdrażania i korzystania z tych metryk w codziennej pracy.
+  
+  - **Zaskakujące odkrycia:** Jakie mit o metrykach DORA zostanie obalony? Czy naprawdę mogą one przewidzieć sukces projektu?
+  
+  Jeśli chcecie wiedzieć, jak wykorzystać te narzędzia do usprawnienia waszych operacji i uzyskania przewagi konkurencyjnej, ten odcinek jest właśnie dla Was!
+  
+  **Nie przegapcie!** Nowy odcinek już czeka tutaj: <https://patoarchitekci.io/121/> Dodatkowo znajdziecie tam mnóstwo dodatkowych materiałów i linków. 
+  
+  Do usłyszenia!
   
 
   ## Posłuchaj odcinka na ⬇️
@@ -26,7 +45,7 @@ newsletter:  |
 
 ➡️ [18.06.2024 Observability](https://app.easycart.pl/checkout/78499600/062024-observabiity)
 
-Witajcie w kolejnym odcinku Patoarchitektów! Naszym gościem jest **Kinga Gaździńska**, architektka z grupy Pracuj, która nie tylko doskonale zna teorię, ale przede wszystkim stosuje metryki DORA na co dzień, przekuwając surowe dane w realne korzyści dla swojego zespołu.
+Witajcie w kolejnym odcinku Patoarchitektów! Naszym gościem jest **Kinga Gaździńska**, architektka z Grupy Pracuj, która nie tylko doskonale zna teorię, ale przede wszystkim stosuje metryki DORA na co dzień, przekuwając surowe dane w realne korzyści dla swojego zespołu.
 Porozmawiamy o tym, jak te metryki zmieniły jej firmę, odkrywając,** co tak naprawdę stoi za sukcesami i porażkami projektów IT.** Czy metryki mogą naprawdę przewidzieć przyszłość projektu? 
 Czy to czarna magia danych, czy rzetelne narzędzie, które każdy z nas powinien znać? Odpowiedzi na te pytania mogą zaskoczyć nawet najbardziej doświadczonych specjalistów. Kinga ostro rozwiewa mity i obala stereotypy związane z DORA! Aż żal przegapić!
 
