--- a/_news/2024-08-27-8.md
+++ b/_news/2024-08-27-8.md
@@ -4,14 +4,21 @@ date: 2024-08-27
 ---
 🙌
 
+Na tapet wjeżdża chmura z logo Lidla oraz jak wspierać się w podejmowaniu decyzji, czyli frameworki decyzyjne.
 
+Last call na szkolenie z Łukaszem dla community [Order of Devs](https://discord.gg/tcuHtnBede) - [[28.08.2024] Szkolenie RKE2 i Rancher](https://app.easycart.pl/checkout/kaluznyio/szkolenie-rke2-i-rancher) - uwaga, ze względu na pierwszą edycję cena jest mega promocyjna. Zaraz kończą się miejsca!
+
+BTW, sprawdź jesienne [Patoszkolenia](https://patoarchitekci.io/szkolenia/)!
+
+
+## Szymon: [Frameworki decyzyjne](https://mikefisher.substack.com/p/decision-making-frameworks)
+Podejmowanie decyzji. Niby proste, ale częściej widuję skrajności (paraliż decyzyjny albo nie przemyślana decyzja) niż uporządkowany proces. I tu ciężko określić które jest gorsze. Jedno kończy się brakiem decyzji a drugie w najgorszym wypadku z decyzją której nie da się uzasadnić albo obronić. Czyli przy pierwszej wątpliwości zostanie zmieniona.
+Dlatego dziś w jako rekomendacja przegląd modeli decyzyjnych. Nie każdy model jest dobry dla każdego i na każdy moment (kontekst jest także tu królem). Ale świadomość jakie są i uporządkowanie tego z którego korzystamy przyda się każdemu.
 
 ## Łukasz: [Chmura prosto z Lidla 😂](https://www.irishtimes.com/business/2024/08/23/how-lidl-accidentally-took-on-the-big-guns-of-cloud-computing/)
 albo inaczej [STACKIT –The German business cloud](https://www.stackit.de/en/), brzmi zabawnie, ale w podobny sposób powstał AWS 😅. Jeden pozytywny aspekt to usługi – OSS, które uznajemy za cloud-native, opakowane jako managed services.
 
 Czy europejski cloud ma sens? Tak, ale bez projektów finansowanych z EU(z ich przeszkadzającymi wymaganiami i pomysłami), które mają na celu tworzenie nowych standardów i kodu, którego nikt później nie używa (miałem ostatnio okazję sprawdzić kilka takich projektów – to akademicka sztuka dla sztuki).”
 
-## Szymon: [Frameworki decyzyjne](https://mikefisher.substack.com/p/decision-making-frameworks)
-Podejmowanie decyzji. Niby proste, ale częściej widuję skrajności (paraliż decyzyjny albo nie przemyślana decyzja) niż uporządkowany proces. I tu ciężko określić które jest gorsze. Jedno kończy się brakiem decyzji a drugie w najgorszym wypadku z decyzją której nie da się uzasadnić albo obronić. Czyli przy pierwszej wątpliwości zostanie zmieniona.
-Dlatego dziś w jako rekomendacja przegląd modeli decyzyjnych. Nie każdy model jest dobry dla każdego i na każdy moment (kontekst jest także tu królem). Ale świadomość jakie są i uporządkowanie tego z którego korzystamy przyda się każdemu.
 
+PS. Masz pytania? Pisz śmiało po drugiej stronie to nie bot na bazie GPT czy Claude 😎
