--- a/_posts/2024-09-27-123.md
+++ b/_posts/2024-09-27-123.md
@@ -28,13 +28,14 @@ Ogórki pozbierane, trzeba wracać do komputera. Czy faktycznie nic się nie dzi
 - Spadających kosztach wykorzystania modeli LLM
 - Jakości danych firmowych i, Szymona zdaniem naiwnych, nadziejach Łukasza na to, że automat to ogarnie.
 
-A teraz nie ma co się obijać - wpadajcie na naszego Discorda! Tam możecie się z nami pokłócić o przyspieszanie SQL-a, podyskutować o naiwnych nadziejach na AI, albo po prostu podzielić się swoimi IT-owymi przemyśleniami.
+A teraz nie ma co się obijać - wpadajcie na naszego [Discorda](https://discord.gg/2BztCRMpy6)! Tam możecie się z nami pokłócić o przyspieszanie SQL-a, podyskutować o naiwnych nadziejach na AI, albo po prostu podzielić się swoimi IT-owymi przemyśleniami.
 
 
 Słuchasz Patoarchitektów dzięki PROTOPII – firmie, w której Łukasz i Szymon działają na co dzień, wspierając zespoły IT na każdym etapie: od projektowania, przez wdrożenia i migracje, aż po optymalizację i zabezpieczenia. Oferujemy też mentoring i szkolenia dostosowane do potrzeb każdej firmy, niezależnie od wielkości. Sprawdź nas: [protopia.tech](https://protopia.tech/)
 
 Linki i ciekawe znaleziska:
 
+- [Pato Discord](https://discord.gg/2BztCRMpy6)
 - [Zendesk Moves from DynamoDB to MySQL and S3 to Save over 80% in Costs - InfoQ](https://www.infoq.com/news/2023/12/zendesk-dynamodb-mysql-s3-cost/)
 - [Istio 1.23 Drops the Sidecar for a Simpler Ambient Mesh](https://thenewstack.io/istio-1-23-drops-the-sidecars-for-a-simpler-ambient-mesh/)
 - [Elasticsearch is Open Source, Again  ](https://www.elastic.co/blog/elasticsearch-is-open-source-again)
