--- a/_posts/2024-10-04-124.md
+++ b/_posts/2024-10-04-124.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: '#124 Short #56: Dashboardy, Scrum, Dług Techniczny, AI, GraphQL - Od Absurdu po Optymalizację'
+title: '#124 Short #56: Dashboardy, Scrum, Dług Techniczny, AI, Grafy w Spanner'
 date: 2024-10-04 08:00:00 +0200
 description: 
 episode: "124"
@@ -20,7 +20,7 @@ newsletter:  |
 
   ➡️ [YouTube]()
 ---
-Spotify: 4900 dashboardów w 2023 roku. Absurd czy potrzeba? Scrum vs Kanban - stres i adaptacyjność. Refaktoryzacja długu technicznego. Uczyć się czy przepisać kod? OpenAI, Microsoft, Google - konkurencja gigantów. AI, LLM, atom - kontrowersje i wyzwania. Pragmatic Engineer radzi. GraphQL w Google Spanner.
+Spotify: 4900 dashboardów w 2023 roku. Absurd czy potrzeba? Scrum vs Kanban - stres i adaptacyjność. Refaktoryzacja długu technicznego. Uczyć się czy przepisać kod? OpenAI, Microsoft, Google - konkurencja gigantów. AI, LLM, atom - kontrowersje i wyzwania. Pragmatic Engineer radzi. Grafy w Google Spanner.
 
 
 Słuchasz Patoarchitektów dzięki PROTOPII – firmie, w której Łukasz i Szymon działają na co dzień, wspierając zespoły IT na każdym etapie: od projektowania, przez wdrożenia i migracje, aż po optymalizację i zabezpieczenia. Oferujemy też mentoring i szkolenia dostosowane do potrzeb każdej firmy, niezależnie od wielkości. Sprawdź nas: [protopia.tech](https://protopia.tech/)
