--- a/_posts/2024-10-11-125.md
+++ b/_posts/2024-10-11-125.md
@@ -6,7 +6,7 @@ description:
 episode: "125"
 tags: []
 spreaker: 62311295
-apple: 
+apple: https://podcasts.apple.com/pl/podcast/short-57-postgresql-17-copilot-mikroserwisy-chmura/id1477067604?i=1000672670387&uo=4
 newsletter:  |
   
 
@@ -14,16 +14,22 @@ newsletter:  |
 
   ➡️ [WWW](https://patoarchitekci.io/125/)
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/4jkrc5APp21kdm4x1IUfI8)
 
-  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/)
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/https://podcasts.apple.com/pl/podcast/short-57-postgresql-17-copilot-mikroserwisy-chmura/id1477067604?i=1000672670387&uo=4)
 
-  ➡️ [YouTube]()
+  ➡️ [YouTube](https://www.youtube.com/watch?v=mQIgP1WBYCo)
 ---
-PostgreSQL 17: wydajność i skalowalność. Service Now migruje z MariaDB. Copilot vs produktywność programistów - badanie wpływu AI. Uber konsoliduje mikroserwisy. Azure Boost i OpenHCL konkurują z AWS Graviton. WordPress vs WP Engine: konflikt gigantów. Trendy IT 2024: chmura, AI, bazy danych. Patoarchitekci analizują zmiany technologiczne. Przyszłość developmentu: człowiek czy maszyna? Optymalizacja architektury: monolity wracają do łask?
+**Patoarchitekci** znowu atakują! W _Shorcie #57_ serwują gorącą mieszankę IT-nowości. Od **PostgreSQL 17** po dramę wokół **WordPressa** - będzie się działo!
+
+Zanurz się w świecie `microservices`, **cloud migration** i **AI-assisted coding**. Poznaj sekrety _Azure Boost_ i dowiedz się, dlaczego **Uber** porzuca mikroserwisy. _GitHub Copilot_ zwiększa produktywność? Sprawdź wyniki badań!
+
+Masz dość korporacyjnego bełkotu? Posłuchaj **Patoarchitektów** i zostań mistrzem _IT buzzwords_! Zaimponuj szefowi wiedzą o **RaptorDB** i _OpenHCL_. Twoja kariera wystrzeli jak **PostgreSQL** po optymalizacji!
 
 
 Słuchasz Patoarchitektów dzięki PROTOPII – firmie, w której Łukasz i Szymon działają na co dzień, wspierając zespoły IT na każdym etapie: od projektowania, przez wdrożenia i migracje, aż po optymalizację i zabezpieczenia. Oferujemy też mentoring i szkolenia dostosowane do potrzeb każdej firmy, niezależnie od wielkości. Sprawdź nas: [protopia.tech](https://protopia.tech/)
+
+Discord 👉 [https://discord.gg/78zPcEaP22](https://discord.gg/78zPcEaP22)
 
 Linki i ciekawe znaleziska:
 
