--- a/_posts/2024-10-18-126.md
+++ b/_posts/2024-10-18-126.md
@@ -33,9 +33,12 @@ Discord 👉 [https://discord.gg/78zPcEaP22](https://discord.gg/78zPcEaP22)
 
 Linki i ciekawe znaleziska:
 
+- [Patoszkolenia](https://patoarchitekci.io/szkolenia/)
+- [Pato Discord](https://discord.gg/78zPcEaP22)
 - [The Twelve-Factor App ](https://12factor.net/)
 - [Twelve-Factor App methodology - Wikipedia](https://en.wikipedia.org/wiki/Twelve-Factor_App_methodology)
 - [An illustrated guide to 12 Factor Apps](https://www.redhat.com/en/blog/12-factor-app)
+- [Szkolenia](https://protopia.tech/szkolenia)
 
 ### Transkrypcja
 
