--- a/_posts/2024-11-01-128.md
+++ b/_posts/2024-11-01-128.md
@@ -5,8 +5,8 @@ date: 2024-11-01 08:00:00 +0200
 description: 
 episode: "128"
 tags: []
-spreaker: 
-apple: 
+spreaker: 62569631
+apple: https://podcasts.apple.com/pl/podcast/short-59-uber-cd-zero-downtime-vs-db-ebpf-profiling/id1477067604?i=1000675307657&uo=4
 newsletter:  |
   
 
@@ -14,11 +14,11 @@ newsletter:  |
 
   ➡️ [WWW](https://patoarchitekci.io/128/)
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/4ctQCIPsPa1qGOkvWsRPAh)
 
-  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/)
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/https://podcasts.apple.com/pl/podcast/short-59-uber-cd-zero-downtime-vs-db-ebpf-profiling/id1477067604?i=1000675307657&uo=4)
 
-  ➡️ [YouTube]()
+  ➡️ [YouTube](https://www.youtube.com/watch?v=yBArKZP8-ug)
 ---
 **Short #59** to prawdziwa _patoarchitektoniczna_ uczta! Od **Uber CD** po **eBPF Profiling**, ten odcinek ma wszystko.
 
