--- a/_posts/2024-11-08-129.md
+++ b/_posts/2024-11-08-129.md
@@ -1,12 +1,12 @@
 ---
 layout: post
-title: '#129 Technology Radar vol. 31'
+title: '#129 Technology Radar vol. 31 - Review'
 date: 2024-11-08 08:00:00 +0200
 description: 
 episode: "129"
 tags: []
 spreaker: 62654679
-apple: 
+apple: https://podcasts.apple.com/pl/podcast/technology-radar-vol-31-review/id1477067604?i=1000676177746&uo=4
 newsletter:  |
   
 
@@ -14,11 +14,11 @@ newsletter:  |
 
   ➡️ [WWW](https://patoarchitekci.io/129/)
 
-  ➡️ [Spotify](https://open.spotify.com/episode/)
+  ➡️ [Spotify](https://open.spotify.com/episode/6kDcfxXWdV0v7RZbnDPRRT)
 
-  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/)
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/https://podcasts.apple.com/pl/podcast/technology-radar-vol-31-review/id1477067604?i=1000676177746&uo=4)
 
-  ➡️ [YouTube](https://youtu.be/NqhGDWdXPsY)
+  ➡️ [YouTube](https://www.youtube.com/watch?v=NqhGDWdXPsY)
 ---
 **Technology Radar vol. 31** wylądował na naszych ekranach! Łukasz i Szymon skanują horyzont IT, wypatrując _gorących_ trendów i _chłodnych_ rozczarowań. Czy _LLM-y_ zdominują świat, a _Rust_ zardzewieje?
 
@@ -33,7 +33,36 @@ Discord 👉 [https://discord.gg/78zPcEaP22](https://discord.gg/78zPcEaP22)
 
 Linki i ciekawe znaleziska:
 
-
+- [Nie dla mięczaków: Patoszkolenia, które zmieniają zasady gry! - Patoarchitekci](https://patoarchitekci.io/szkolenia/)
+- [Thoughtworks: Technology Radar An opinionated guide to today's technology landscape](https://www.thoughtworks.com/radar)
+- [Technology Radar vol. 31 - PDF](https://www.thoughtworks.com/content/dam/thoughtworks/documents/radar/2024/10/tr_technology_radar_vol_31_en.pdf)
+- [Canary](https://www.thoughtworks.com/en-de/radar/techniques/summary/1-canary)
+- [Component Testing](https://www.thoughtworks.com/en-de/radar/techniques/summary/component-testing)
+- [Continuous Deployment](https://www.thoughtworks.com/en-de/radar/techniques/summary/continuous-deployment)
+- [Retrieval-Augmented Generation (RAG)](https://www.thoughtworks.com/radar/techniques/retrieval-augmented-generation-rag)
+- [Synthetic Data for Testing and Training Models](https://www.thoughtworks.com/radar/techniques/synthetic-data-for-testing-and-training-models)
+- [Replacing Pair Programming with AI](https://www.thoughtworks.com/radar/techniques/replacing-pair-programming-with-ai)
+- [LLM Bans](https://www.thoughtworks.com/radar/techniques/llm-bans)
+- [Observability 2.0](https://www.thoughtworks.com/radar/techniques/observability-2-0)
+- [Iggy](https://www.thoughtworks.com/radar/platforms/iggy)
+- [Golem](https://www.thoughtworks.com/en-de/radar/platforms/summary/golem)
+- [Spinkube](https://www.thoughtworks.com/en-de/radar/platforms/summary/spinkube)
+- [Databricks Unity Catalog](https://www.thoughtworks.com/radar/platforms/databricks-unity-catalog)
+- [Azure AI Search](https://www.thoughtworks.com/radar/platforms/azure-ai-search)
+- [Elastisys Compliant Kubernetes](https://www.thoughtworks.com/radar/platforms/elastisys-compliant-kubernetes)
+- [PgLite](https://www.thoughtworks.com/radar/platforms/pglite)
+- [Bruno](https://www.thoughtworks.com/radar/tools/bruno)
+- [K9s](https://www.thoughtworks.com/radar/tools/k9s)
+- [SOPS](https://www.thoughtworks.com/radar/tools/sops)
+- [Difftastic](https://www.thoughtworks.com/radar/tools/difftastic)
+- [LinearB](https://www.thoughtworks.com/radar/tools/linearb)
+- [pgVector](https://www.thoughtworks.com/radar/tools/pgvector)
+- [Cursor](https://www.thoughtworks.com/radar/tools/cursor)
+- [JetBrains AI Assistant](https://www.thoughtworks.com/radar/tools/jetbrains-ai-assistant)
+- [CAP](https://www.thoughtworks.com/radar/languages-and-frameworks/cap)
+- [LlamaIndex](https://www.thoughtworks.com/radar/languages-and-frameworks/llamaindex)
+- [Flutter for Web](https://www.thoughtworks.com/en-de/radar/languages-and-frameworks/summary/flutter-for-web)
+- [Score](https://www.thoughtworks.com/en-de/radar/languages-and-frameworks/summary/score)
 
 ### Transkrypcja
 
