--- a/_posts/2025-01-10-136.md
+++ b/_posts/2025-01-10-136.md
@@ -7,6 +7,18 @@ episode: "136"
 tags: []
 spreaker: 63621812
 apple: https://podcasts.apple.com/pl/podcast/patoarchitekci/id1477067604?i=1000683426413
+newsletter:  |
+  
+
+  ## Posłuchaj odcinka na ⬇️
+
+  ➡️ [WWW](https://patoarchitekci.io/136/)
+
+  ➡️ [Spotify](https://open.spotify.com/episode/2CWGR7E8xj0ThLLP8ycFD3)
+
+  ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/https://podcasts.apple.com/pl/podcast/patoarchitekci/id1477067604?i=1000683426413)
+
+  ➡️ [YouTube](https://www.youtube.com/watch?v=KBM5z113x_4)
 ---
 **"Prosto i praktycznie wyjaśniamy: AI"** to nie _slogan_, a _misja_! Patoarchitekci dekonstruują świat **LLM**, **GenAI** i **tokenizacji**. Przygotujcie się na _deszcz akronimów_ i _burzę mózgów_!
 
