--- a/_posts/2025-01-10-136.md
+++ b/_posts/2025-01-10-136.md
@@ -20,24 +20,35 @@ newsletter: |
   
 
   ## Odcinek na stronie i materiały do niego ⬇️
+
   ➡️ [Odsłuchaj na stronie](https://patoarchitekci.io/136/)
+
   ➡️ [Spotify](https://open.spotify.com/episode/2CWGR7E8xj0ThLLP8ycFD3)
+
   ➡️ [Apple Podcasts](https://podcasts.apple.com/pl/podcast/patoarchitekci/id1477067604?i=1000683426413)
+
   ➡️ [YouTube](https://www.youtube.com/watch?v=KBM5z113x_4)
+
 
   ## Short & Sweet
 
-  Szymon poleca: []()
+  ### Szymon poleca:
+  []()
   
 
-  Łukasz poleca: []()
+
+  ### Łukasz poleca:
+  []()
   
+
 
   ## 🤝 Dołącz do społeczności
   Discord 👉 [https://discord.gg/78zPcEaP22](https://discord.gg/78zPcEaP22)
 
+
   ## 🏢 Patron odcinka
   Słuchasz Patoarchitektów dzięki PROTOPII – firmie, w której Łukasz i Szymon działają na co dzień, wspierając zespoły IT na każdym etapie: od projektowania, przez wdrożenia i migracje, aż po optymalizację i zabezpieczenia. Oferujemy też mentoring i szkolenia dostosowane do potrzeb każdej firmy, niezależnie od wielkości. Sprawdź nas: [protopia.tech](https://protopia.tech/)
+
 
   PS. Masz pytania? Pisz śmiało po drugiej stronie to nie bot na bazie GPT czy Claude 😎
 ---
